split this up into multiple modules, but keep everything in fr24 for now just in case

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,2 @@
-# ignore all
-*
-
-# keep all with extentions and files/dirs that start with a "."
-!*.*
-
-# unignore dirs
-!fr24
-!webrequest
-!testdata
+/tmp
+*.png
